list contacts + conversation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta description="">
 
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/Chat.css">
+        <link rel="stylesheet" type="text/css" href="styles/Contacts.css">
+        <link rel="stylesheet" type="text/css" href="styles/Conversation.css">
 
         <script src='bundle.js' defer></script>
 
