--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-
         <meta description="">
 
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="styles/Chat.css">
         <link rel="stylesheet" type="text/css" href="styles/Contacts.css">
         <link rel="stylesheet" type="text/css" href="styles/Conversation.css">
+        <link rel="stylesheet" type="text/css" href="style/style.css">
 
         <script src='bundle.js' defer></script>
 
